AG-3390 - Add search to community pages, fix homepage header layout bug

--- a/documentation/ag-grid-docs/src/design-system/modules/ProductDropdown.module.scss
+++ b/documentation/ag-grid-docs/src/design-system/modules/ProductDropdown.module.scss
@@ -3,6 +3,7 @@
 .customMenu {
     display: none;
     padding-right: $spacing-size-2;
+    margin-right: auto;
     user-select: none;
 
     @media screen and (min-width: 440px) {
